<resources>
    <string name="app_name">Patriot Bumi Android</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="login_command"><b>Login Sekarang</b> lalu dapatkan kemudahan dan kenyamanan menggunakan aplikasi dengan sempurna</string>
    <string name="login">Login</string>
    <string name="article">Artikel</string>
    <string name="toko">Toko</string>
    <string name="aksi">Aksi</string>
    <string name="beranda">Beranda</string>
    <string name="penghargaan">Penghargaan</string>
    <string name="profil">Profil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daftar_tugas">Daftar Tugas</string>
    <string name="produk_unggulan">Produk Unggulan</string>
    <string name="patriot_bumi">Patriot Bumi</string>
    <string name="spesial_untuk_anda">Spesial untuk Anda</string>
    <string name="aksi_tiap_hari">Aksi tiap hari</string>
    <string name="aksi_bonus">Aksi bonus</string>
    <string name="dapatkan_xp">Dapatkan XP</string>
    <string name="dapatkan_koin">Dapatkan Koin</string>
    <string name="top_up_saldo">Top Up Saldo</string>
    <string name="aksi_saya_hari_ini">Aksi Saya Hari Ini</string>
    <string name="badge_saya">Badge Saya</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="keamanan">Keamanan</string>
    <string name="produk_terpopuler">Produk Terpopuler</string>
    <string name="kategori">Kategori</string>
    <string name="pakaian">Pakaian</string>
    <string name="aksesoris">Aksesoris</string>
    <string name="furnitur">Furnitur</string>
    <string name="alat_makan">Alat Makan</string>
    <string name="alat_mandi">Alat Mandi</string>
    <string name="xp">XP</string>
    <string name="jadilah_penyelamat_bumi">Jadilah Penyelamat Bumi</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="promo">Promo</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="agree_with_terms_and_conditions">Agree with Terms and Conditions</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="level">Level</string>
    <string name="misi">Misi</string>
    <string name="selesai">Selesai</string>
    <string name="tujuan">Tujuan</string>
    <string name="upload">Upload</string>
    <string name="lanjutkan_misi">Lanjutkan Misi</string>
    <string name="aksi_kamu_hari_ini">Aksi Kamu Hari Ini</string>
    <string name="logout">Logout</string>
    <string name="badge_kamu">Badge Kamu</string>
    <string name="sudah_dikonfirmasi">Sudah dikonfirmasi</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="beli">Beli</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="pilih_metode_pembayaran">Pilih Metode Pembayaran</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="mini_market">Mini Market</string>
    <string name="e_money">E-Money</string>
    <string name="rekening">Rekening</string>
    <string name="token">TOKEN</string>
    <string name="donasi">Donasi</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="total">Total</string>
    <string name="detail_harga">Detail Harga</string>
    <string name="harga_produk">Harga Produk</string>
    <string name="kode_unik">Kode Unik</string>
    <string name="username">Username</string>
    <string name="uploaded">Uploaded</string>
</resources>
