<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <item-->
<!--        android:id="@+id/cart_menu"-->
<!--        android:title="@string/toko"-->
<!--        android:icon="@drawable/ic_shopping_cart_black_24dp"/>-->

    <item
        android:id="@+id/home_menu"
        android:title="@string/beranda"
        android:icon="@drawable/ic_home_black_24dp"/>

    <item
        android:id="@+id/activity_menu"
        android:title="@string/aksi"
        android:icon="@drawable/ic_speaker_notes_black_24dp"/>

    <item
        android:id="@+id/reward_menu"
        android:title="@string/penghargaan"
        android:icon="@drawable/ic_rank"/>

    <item
        android:id="@+id/profil_menu"
        android:title="@string/profil"
        android:icon="@drawable/ic_person_black_24dp"/>

</menu>