<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Authenticate.LoginActivity"
    android:background="@color/colorWhite">

    <LinearLayout
        android:id="@+id/patriot_bumi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/space_double"
        android:gravity="start|center_vertical"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:id="@+id/back"
            android:tint="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="@dimen/font_medium"
            android:layout_marginLeft="@dimen/space"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patriot_bumi"
        android:padding="@dimen/space_double"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:src="@drawable/logo"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/font_reg"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:text="@string/jadilah_penyelamat_bumi"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_double"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_white_edittext"
                    app:hintTextAppearance="@style/CustomTextInputLayout"
                    android:padding="@dimen/space"
                    android:layout_marginLeft="@dimen/space_double"
                    android:layout_marginRight="@dimen/space_double">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890_-.@"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textSize="@dimen/font_medium"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:background="@null"
                        android:padding="@dimen/space"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_white_edittext"
                    app:hintTextAppearance="@style/CustomTextInputLayout"
                    android:padding="@dimen/space"
                    android:layout_marginTop="@dimen/space_double"
                    android:layout_marginLeft="@dimen/space_double"
                    android:layout_marginRight="@dimen/space_double">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:digits="qwertyuiopasdfghjklzxcvbnm1234567890QWERTYUIOPASDFGHJKLZXCVBNM"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textSize="@dimen/font_medium"
                        android:textColor="@color/black"
                        android:background="@null"
                        android:textColorHint="@color/black"
                        android:padding="@dimen/space"/>

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/space_double">

                    <CheckBox
                        android:id="@+id/checkBoxRememberMe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remember_me"
                        android:textColor="@color/colorPrimary"
                        android:buttonTint="@color/colorPrimary"
                        android:textSize="@dimen/font_small"/>

                    <TextView
                        android:id="@+id/textViewForgotPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/forgot_password"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_small"/>

                </LinearLayout>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_marginTop="@dimen/space_double"
                    android:layout_marginLeft="@dimen/space_double"
                    android:layout_marginRight="@dimen/space_double"
                    android:textSize="@dimen/font_medium"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:background="@drawable/button_background"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="@dimen/space_double"
                android:id="@+id/registerPage">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/belum_punya_akun"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_reg"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_reg"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/space"
                    android:text="@string/register"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>