<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Activity.ActivityFragment"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_marginBottom="50dp">

    <LinearLayout
        android:id="@+id/patriot_bumi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/space_double"
        android:gravity="start|center_vertical"
        android:layout_alignParentTop="true">

<!--        <ImageView-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            app:srcCompat="@drawable/logo"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patriot_bumi"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patriot_bumi"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_double"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/spesial_untuk_anda"
                    android:textSize="@dimen/font_medium"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/space"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_special_recyclerview"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp"
                    android:tint="@color/colorPrimary"
                    android:rotation="270"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/space"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aksi_tiap_hari"
                    android:textSize="@dimen/font_medium"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/space"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_everyday_recyclerview"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp"
                    android:tint="@color/colorPrimary"
                    android:rotation="270"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/space"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/space_triple">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aksi_bonus"
                    android:textSize="@dimen/font_medium"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/space"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_bonus_recyclerview"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp"
                    android:tint="@color/colorPrimary"
                    android:rotation="270"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/space"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>